testsuite/tests/parser/should_fail/T21843c.hs
module UnicodeSmartQuotes where

badString = "hello”
